--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
     "react-native-elements": "^0.16.0",
+    "react-native-modal-picker": "0.0.16",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11"
   },
